--- a/outlines.css
+++ b/outlines.css
@@ -2,17 +2,56 @@
 * {
   background-color: #212121;
   color: #fff;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-a:link,
-a:visited
+header a:link,
+header a:visited,
+footer a:link,
+footer a:visited
 {
-  font-size:16px;
-  color: #ff994f;
+  color: #ffffff;
+  text-decoration: none;
 }
-a:hover
+header a:hover, footer a:hover
 {
-  font-size:16px;
-  color: #ff994f;
+  color: #ffcece;
+  text-decoration: none;
+}
+main {
+  padding-top: 40px;
+  padding-left: 20%;
+}
+body {
+  margin: 0%;
+}
+header {
+  position: fixed;
+  padding: 0 0;
+  width: 100%;
+  margin: 0;
+  background-color: #a10000;
+}
+header nav ul {
+  padding-left: 20%;
+}
+header nav ul li, footer ul li {
+  display: inline;
+  padding: 0% 1%;
+}
+header a, header ul, header li{
+  background-color: #a10000;
+}
+footer a, footer ul, footer li, footer p, footer time {
+  background-color: #a10000;
+}
+div {
+  padding-top: 30px;
+}
+footer {
+  text-align: center;
+  padding: 0 0;
+  width: 100%;
+  margin: 0;
+  background-color: #a10000;
 }
