--- a/outlines.css
+++ b/outlines.css
@@ -1,8 +1,12 @@
 
 * {
-  background-color: #212121;
+  margin: 0;
   color: #fff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.navpoints {
+  margin-bottom: 2%;
 }
 
 header a:link,
@@ -19,15 +23,25 @@ header a:hover, footer a:hover
   text-decoration: none;
 }
 main {
+  background-color: #202020;
+  border-left: 2px dashed #a10000;
+  border-right: 2px dashed #a10000;
   padding-top: 40px;
-  padding-left: 20%;
+  margin-left: 20%;
+  margin-right: 20%;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 body {
-  margin: 0%;
+  margin: 0;
+  background-image: url("lines.svg");
+  background-size: 500px;
+  background-color: #202020;
+  background-repeat: repeat;
 }
 header {
   position: fixed;
-  padding: 0 0;
+  padding: 1%;
   width: 100%;
   margin: 0;
   background-color: #a10000;
@@ -44,6 +58,7 @@ header a, header ul, header li{
 }
 footer a, footer ul, footer li, footer p, footer time {
   background-color: #a10000;
+  margin: 0;
 }
 div {
   padding-top: 30px;
@@ -54,4 +69,9 @@ footer {
   width: 100%;
   margin: 0;
   background-color: #a10000;
+}
+code {
+  color: rgb(226, 202, 202);
+  font-size: 12px;
+  font-family: "Lucida Console", monospace;
 }
