--- a/outlines.css
+++ b/outlines.css
@@ -1,12 +1,30 @@
 
 * {
+  line-height: 180%;
   margin: 0;
   color: #fff;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Calibri, sans-serif;
+}
+
+.img_fit {
+  object-fit: cover;
+  width: 20%;
+  height: auto;
+}
+
+.sec {
+  background-color: #702d2d;
+  padding: 10px 20px;
+  border-radius: 20px;
 }
 
 .navpoints {
-  margin-bottom: 2%;
+  margin-bottom: 10%;
+}
+
+.highlighted {
+  font-family: Tahoma;
+  color: #ff4848;
 }
 
 header a:link,
@@ -23,9 +41,7 @@ header a:hover, footer a:hover
   text-decoration: none;
 }
 main {
-  background-color: #181818;
-  border-left: 2px dashed #a10000;
-  border-right: 2px dashed #a10000;
+  background-color: #251010;
   padding-top: 40px;
   margin-left: 20%;
   margin-right: 20%;
@@ -34,17 +50,24 @@ main {
 }
 body {
   margin: 0;
-  background-image: url("lines.svg");
+  background-image: url("lines1.svg");
   background-size: 500px;
-  background-color: #222222;
+  background-color: #361B1A;
   background-repeat: repeat;
+}
+
+img {
+  float: right;
+  margin: 10px;
+  border-radius: 3%;
+  width: 24%;
 }
 header {
   position: fixed;
   padding: 1%;
   width: 100%;
   margin: 0;
-  background-color: #a10000;
+  background-color: #8E3838;
 }
 header nav ul {
   padding-left: 20%;
@@ -54,24 +77,26 @@ header nav ul li, footer ul li {
   padding: 0% 1%;
 }
 header a, header ul, header li{
-  background-color: #a10000;
+  background-color:#8E3838;
 }
 footer a, footer ul, footer li, footer p, footer time {
-  background-color: #a10000;
+  background-color: #8E3838;
   margin: 0;
-}
-div {
-  padding-top: 30px;
 }
 footer {
   text-align: center;
   padding: 0 0;
   width: 100%;
   margin: 0;
-  background-color: #a10000;
+  background-color: #8E3838;
 }
 code {
   color: rgb(226, 202, 202);
   font-size: 12px;
   font-family: "Lucida Console", monospace;
+}
+.skull {
+  font-family: monospace;
+  text-align: center;
+  padding-top: 5%;
 }
