--- a/outlines.css
+++ b/outlines.css
@@ -8,23 +8,23 @@
 
 .img_fit {
   object-fit: cover;
-  width: 20%;
+  width: 23%;
   height: auto;
 }
 
 .sec {
-  background-color: #702d2d;
+  background-color: #3b1818;
   padding: 10px 20px;
   border-radius: 20px;
 }
 
 .navpoints {
-  margin-bottom: 10%;
+  margin-bottom: 5%;
 }
 
 .highlighted {
   font-family: Tahoma;
-  color: #ff4848;
+  color: #b63030;
 }
 
 header a:link,
@@ -50,7 +50,7 @@ main {
 }
 body {
   margin: 0;
-  background-image: url("lines1.svg");
+  background-image: url("Pictures/lines1.svg");
   background-size: 500px;
   background-color: #361B1A;
   background-repeat: repeat;
@@ -62,6 +62,33 @@ img {
   border-radius: 3%;
   width: 24%;
 }
+
+.img_show {
+  position: fixed;
+  width: auto;
+  height: auto;
+  border-radius: 10px;
+  opacity: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 20px 1px red;
+  border: 1px solid red;
+
+  max-width: 80%;
+  max-height: 80%;
+}
+
+.fade {
+  visibility: hidden;
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
 header {
   position: fixed;
   padding: 1%;
@@ -73,11 +100,9 @@ header nav ul {
   padding-left: 20%;
 }
 header nav ul li, footer ul li {
+  background-color:#8E3838;
   display: inline;
   padding: 0% 1%;
-}
-header a, header ul, header li{
-  background-color:#8E3838;
 }
 footer a, footer ul, footer li, footer p, footer time {
   background-color: #8E3838;
